matroskademux: Preserve forward referenced track tags

https://bugzilla.gnome.org/show_bug.cgi?id=752850